--- a/html-css-practice/css/practice-css.css
+++ b/html-css-practice/css/practice-css.css
@@ -248,3 +248,84 @@ ul.illuminations {
 ul.season {
   list-style-position: inside;
 }
+
+
+/* CSS layout | 2. Flex flow direction: the 'flex-direction' property */
+.list-flow {
+  display: flex;
+
+  /* row */
+  flex-direction: row;
+
+  /* row-reverse */
+  flex-direction: row-reverse;
+
+  /* column */
+  flex-direction: column;
+
+  /* column-reverse */
+  flex-direction: column-reverse;
+}
+
+/* 3. Flex-wrap */
+.list-wrap {
+  display: flex;
+  width: 200px;
+  /* nowrap */
+  flex-wrap: nowrap;
+
+  /* wrap */
+  flex-wrap: wrap;
+
+  /* wrap-reverse */
+  flex-wrap: wrap-reverse;
+
+
+}
+
+/* 4. Justify-content */
+.list-justify {
+  display: flex;
+  width: 100%;
+  /* flex-start */
+  justify-content: flex-start;
+
+  /* flex-end */
+  justify-content: flex-end;
+
+  /* center */
+  justify-content: center;
+
+  /* space-between */
+  justify-content: space-between;
+
+  /* space-around */
+  justify-content: space-around;
+}
+
+/* 4. Justify-content */
+.list-align {
+  display: flex;
+  width: 50%;
+  height: 200px;
+  /* auto */
+  align-items: auto;
+
+  /* flex-start */
+  align-items: flex-start;
+
+  /* flex-end */
+  align-items: flex-end;
+
+  /* center */
+  align-items: center;
+
+  /* baseline */
+  align-items: baseline;
+
+  /* stretch */
+  align-items: stretch;
+}
+.list-align li {
+  background-color: red;
+}
