--- a/practice-one/src/components/button.html
+++ b/practice-one/src/components/button.html
@@ -1,4 +1,4 @@
-<a href="javascript:void(0)">
+<a class="button-common-primary" href="javascript:void(0)">
   <span class="button-wrapper">
     {{text}}
   </span>
