--- a/practice-one/src/components/header.html
+++ b/practice-one/src/components/header.html
@@ -14,6 +14,6 @@
     <button class="hamburger">
       <div class="bar"></div>
     </button>
-    <include src="./components/button.html">{ "text": "İletişim" }</include>
+    <include src="./components/button.html" locals='{"text": "Button"}'></include>
   </div>
 </header>
