--- a/practice-one/src/css/components/button.css
+++ b/practice-one/src/css/components/button.css
@@ -4,8 +4,18 @@
     background-color: #f84646;
     padding: 10px 20px;
     border-radius: 5px;
+    transition: .4s;
 }
 
 .button-common-primary .button-wrapper {
     color: #fff;
+    transition: .4s;
+}
+
+.button-common-primary:hover {
+    background-color: #000;
+}
+
+.button-common-primary:hover .button-wrapper {
+    color: #f84646;
 }
