implement footer section

--- a/practice-one/src/components/footer.html
+++ b/practice-one/src/components/footer.html
@@ -1,5 +1,54 @@
-<footer>
+<footer class="footer">
   <div class="footer-wrapper">
-
+    <nav class="footer-navigation">
+      <div class="navigation-item">
+        <h2 class="navigation-title">Çözüm ve Hizmetler</h2>
+        <ul class="navigation-list">
+          <li class="list-item"><a href="javascript:void(0)">Yazılım Geliştirme</a></li>
+          <li class="list-item"><a href="javascript:void(0)">Outsourcing</a></li>
+          <li class="list-item"><a href="javascript:void(0)">Kalite ve Süreç Yönetimi</a></li>
+          <li class="list-item"><a href="javascript:void(0)">Danışmanlık</a></li>
+          <li class="list-item"><a href="javascript:void(0)">IoT Destekli Çözümler</a></li>
+        </ul>
+      </div>
+      <div class="navigation-item">
+        <h2 class="navigation-title">Ürünler</h2>
+        <ul class="navigation-list">
+          <li class="list-item"><a href="javascript:void(0)">Eğitim Yönetim Sistemi</a></li>
+          <li class="list-item"><a href="javascript:void(0)">İnsan Sermayesi Yönetim Sistemi</a></li>
+          <li class="list-item"><a href="javascript:void(0)">Müşteri İlişkileri Yönetim Sistemi</a></li>
+          <li class="list-item"><a href="javascript:void(0)">İçerik Yönetim Sistemi</a></li>
+        </ul>
+      </div>
+      <div class="navigation-item">
+        <h2 class="navigation-title">Kurumsal</h2>
+        <ul class="navigation-list">
+          <li class="list-item"><a href="javascript:void(0)">Hakkımızda</a></li>
+          <li class="list-item"><a href="javascript:void(0)">Belge ve Yetkinlikler</a></li>
+          <li class="list-item"><a href="javascript:void(0)">İş Ortakları</a></li>
+        </ul>
+      </div>
+      <div class="navigation-item">
+        <h2 class="navigation-title">İletişim</h2>
+        <ul class="navigation-list">
+          <li class="list-item"><a href="javascript:void(0)">Bilgi İstek Formu</a></li>
+          <li class="list-item"><a href="javascript:void(0)">Uzman Talep Formu</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="footer-infor">
+      <div class="footer-media">
+        <ul class="media-list">
+          <li class="list-item is-icon"><a href="javascript:void(0)"></a></li>
+          <li class="list-item is-linkedin"><a href="javascript:void(0)"></a></li>
+          <li class="list-item is-twitter"><a href="javascript:void(0)"></a></li>
+          <li class="list-item is-instagram"><a href="javascript:void(0)"></a></li>
+          <li class="list-item is-facebook"><a href="javascript:void(0)"></a></li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
+        <small class="copyright-text">&copy; Copyright 2010-2021 - Can Çevik</small>
+      </div>
+    </div>
   </div>
 </footer>
