--- a/practice-one/src/css/main.css
+++ b/practice-one/src/css/main.css
@@ -1,5 +1,6 @@
 /* bases */
 @import url("./bases/reset.css");
+@import url("./bases/variables.css");
 
 /* layouts */
 @import url("./Layouts/container.css");
