--- a/practice-one/src/css/Layouts/container.css
+++ b/practice-one/src/css/Layouts/container.css
@@ -4,23 +4,24 @@
 }
 
 .wrapper {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
+    padding: 0 1.25rem;
 }
 
 @media screen and (min-width: 768px) {
     .container {
-        max-width: 1028px;
+        min-width: 768px;
     }
+
     .wrapper {
         max-width: 906px;
     }
 }
 
-@media screen and (min-width: 1028px) {
+@media screen and (min-width: 1024px) {
     .container {
-        max-width: 1440px;
+        min-width: 1024px;
     }
+
     .wrapper {
         max-width: 1197px;
     }
