--- a/practice-one/src/css/components/button.css
+++ b/practice-one/src/css/components/button.css
@@ -1,21 +1,21 @@
 .button-common-primary {
     display: flex;
     align-items: center;
-    background-color: #f84646;
+    background-color: var(--color-secondary);
     padding: 10px 20px;
     border-radius: 5px;
     transition: .4s;
 }
 
 .button-common-primary .button-wrapper {
-    color: #fff;
+    color: var(--color-primary);
     transition: .4s;
 }
 
 .button-common-primary:hover {
-    background-color: #000;
+    background-color: var(--color-default);
 }
 
 .button-common-primary:hover .button-wrapper {
-    color: #f84646;
+    color: var(--color-secondary);
 }
