--- a/practice-one/src/css/components/header.css
+++ b/practice-one/src/css/components/header.css
@@ -3,6 +3,7 @@
   padding: 0.9375rem 1.25rem;
   display: flex;
   justify-content: space-between;
+  margin: 0 auto;
 }
 
 .header-wrapper .header-navigation {
@@ -41,12 +42,13 @@
 }
 
 .header-wrapper .navigation-list li a {
-  color: #000;
+  color: var(--color-default);
   transition: 0.4s;
   width: 100%;
 }
+
 .header-wrapper .navigation-list li a:hover {
-  color: #f84646;
+  color: var(--color-secondary);
 }
 
 .hamburger {
@@ -70,7 +72,7 @@
   width: 22px;
   height: 2px;
   border-radius: 30px;
-  background-color: #000;
+  background-color: var(--color-default);
   margin: 6px 0px;
   transition: 0.4s;
 }
@@ -90,27 +92,39 @@
 @media screen and (min-width: 768px) {
   .header-wrapper {
     justify-content: flex-end;
+    max-width: 906px;
   }
+
   .header-wrapper .header-navigation {
     position: initial;
     margin-right: 2.5rem;
   }
+
   .hamburger {
     display: none;
   }
+
   .header-wrapper .navigation-list {
     display: flex;
     justify-content: flex-end;
     padding: 0;
   }
+
   .header-wrapper .navigation-list li {
     display: flex;
     width: max-content;
-    padding: 10px 20px;
+    padding: .625rem 1.25rem;
     margin: 0;
     align-items: center;
   }
+
   .header-wrapper .navigation-list li:not(:last-child) {
     margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-wrapper {
+    max-width: 1197px;
   }
 }
