--- a/practice-one/src/css/components/button.css
+++ b/practice-one/src/css/components/button.css
@@ -5,6 +5,7 @@
     padding: 10px 20px;
     border-radius: 5px;
     transition: .4s;
+    cursor: pointer;
 }
 
 .button-common-primary .button-wrapper {
