--- a/practice-one/src/css/main.css
+++ b/practice-one/src/css/main.css
@@ -1,5 +1,6 @@
 /* bases */
 @import url("./bases/reset.css");
+@import url("./bases/fonts.css");
 
 /* layouts */
 @import url("./Layouts/container.css");
@@ -8,3 +9,6 @@
 @import url("./components/header.css");
 @import url("./components/footer.css");
 @import url("./components/button.css");
+
+/* sections */
+@import url("./sections/keyvisual.css");
