--- a/practice-one/src/css/components/header.css
+++ b/practice-one/src/css/components/header.css
@@ -101,6 +101,8 @@ header {
   .header-wrapper .header-navigation {
     position: initial;
     margin-right: 2.5rem;
+    background: none;
+    transition: none;
   }
 
   .hamburger {
