--- a/practice-one/src/css/components/button.css
+++ b/practice-one/src/css/components/button.css
@@ -2,10 +2,11 @@
     display: flex;
     align-items: center;
     background-color: #f84646;
-    padding: 10px 20px;
+    padding: .625rem 1.25rem;
     border-radius: 5px;
     transition: .4s;
     cursor: pointer;
+    flex: 0 0 auto;
 }
 
 .button-common-primary .button-wrapper {
