--- a/practice-one/src/css/Layouts/container.css
+++ b/practice-one/src/css/Layouts/container.css
@@ -3,6 +3,11 @@
     margin: 0 auto;
 }
 
+main {
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
