--- a/practice-one/src/css/sections/keyvisual.css
+++ b/practice-one/src/css/sections/keyvisual.css
@@ -1,8 +1,8 @@
 .section-top-keyvisual {
   position: relative;
-  top: -66px;
   z-index: 10;
-  padding-top: 137px;
+  padding: 8.5625rem 0;
+  margin-top: -4.125rem;
   font-family: Manrope, sans-serif;
 }
 
@@ -11,7 +11,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 37.5625rem;
+  height: 100%;
   z-index: -1;
 }
 
@@ -64,7 +64,7 @@
 
 @media screen and (min-width: 768px) {
   .section-top-keyvisual {
-    top: -80px;
+    margin-top: -5rem;
   }
   .section-top-keyvisual .is-mobile {
     display: none;
