--- a/practice-one/src/css/main.css
+++ b/practice-one/src/css/main.css
@@ -10,6 +10,9 @@
 @import url("./components/header.css");
 @import url("./components/footer.css");
 @import url("./components/button.css");
+@import url("./components/title.css");
+@import url("./components/detail.css");
 
 /* sections */
 @import url("./sections/keyvisual.css");
+@import url("./sections/manage.css");
