--- a/practice-one/src/css/components/header.css
+++ b/practice-one/src/css/components/header.css
@@ -48,6 +48,7 @@ header {
 
 .header-wrapper .navigation-list li a {
   color: var(--color-default);
+  font-weight: 700;
   transition: 0.4s;
   width: 100%;
 }
