implement provide section

--- a/practice-one/src/components/header.html
+++ b/practice-one/src/components/header.html
@@ -11,8 +11,8 @@
         </ul>
       </div>
     </nav>
-    <button class="hamburger">
-      <div class="bar"></div>
+    <button class="button-menu">
+      <div class="menu-bar"></div>
     </button>
     <include src="./components/button.html" locals='{"text": "İletişim"}'></include>
   </div>
