--- a/practice-one/src/css/main.css
+++ b/practice-one/src/css/main.css
@@ -16,3 +16,4 @@
 /* sections */
 @import url("./sections/keyvisual.css");
 @import url("./sections/manage.css");
+@import url("./sections/provide.css");
