--- a/practice-one/src/css/components/header.css
+++ b/practice-one/src/css/components/header.css
@@ -16,7 +16,7 @@ header {
   top: 0;
   right: 100%;
   z-index: 98;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.9);
   width: 100%;
   height: 100%;
   min-height: 100%;
@@ -43,11 +43,12 @@ header {
 }
 
 .header-wrapper .navigation-list li:not(:last-child) {
-  margin-bottom: 1.25rem;
+  margin-bottom: 3.75rem;
 }
 
 .header-wrapper .navigation-list li a {
   color: var(--color-default);
+  font-size: 1.5rem;
   font-weight: 700;
   transition: 0.4s;
   width: 100%;
