--- a/practice-one/src/css/sections/provide.css
+++ b/practice-one/src/css/sections/provide.css
@@ -86,7 +86,7 @@
   .section-top-provide .provide-list li:not(:last-child)::after {
     transform: translateX(-50%) rotate(-90deg);
     top: 50%;
-    right: 1.25rem;
+    right: 20px;
     width: 28px;
     height: 28px;
     left: initial;
@@ -104,7 +104,17 @@
     width: calc((100% - 124px) / 4);
   }
 
+  .section-top-provide .provide-list .provide-detail {
+    font-size: 1.125rem;
+  }
+
   .section-top-provide .provide-list li:not(:last-child) {
     margin-right: 40px;
+  }
+
+  .section-top-provide .provide-list li:not(:last-child)::after {
+    width: 28px;
+    height: 28px;
+    right: 5px;
   }
 }
