implement info section

--- a/practice-one/src/components/header.html
+++ b/practice-one/src/components/header.html
@@ -3,11 +3,11 @@
     <nav class="header-navigation mobile-nav">
       <div class="navigation-wrapper">
         <ul class="navigation-list">
-          <li class="list-item"><a href="">Çözüm ve Hizmetler</a></li>
-          <li class="list-item"><a href="">Ürünler</a></li>
-          <li class="list-item"><a href="">Teknolojiler</a></li>
-          <li class="list-item"><a href="">İnsan Kaynakları</a></li>
-          <li class="list-item"><a href="">Kurumsal</a></li>
+          <li class="list-item"><a href="javascript:void(0)">Çözüm ve Hizmetler</a></li>
+          <li class="list-item"><a href="javascript:void(0)">Ürünler</a></li>
+          <li class="list-item"><a href="javascript:void(0)">Teknolojiler</a></li>
+          <li class="list-item"><a href="javascript:void(0)">İnsan Kaynakları</a></li>
+          <li class="list-item"><a href="javascript:void(0)">Kurumsal</a></li>
         </ul>
       </div>
     </nav>
