implement contact section

--- a/practice-one/src/css/main.css
+++ b/practice-one/src/css/main.css
@@ -20,3 +20,4 @@
 @import url("./sections/provide.css");
 @import url("./sections/information.css");
 @import url("./sections/reference.css");
+@import url("./sections/contact.css");
