fix layout reference section

--- a/practice-one/src/css/components/company-item.css
+++ b/practice-one/src/css/components/company-item.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 10.625rem;
+  max-width: 10.625rem;
   height: 6rem;
   border-radius: 16px;
   background-color: var(--color-primary);
@@ -26,12 +26,14 @@
 }
 
 .company-item .company-logo {
-  width: 134px;
+  max-width: 134px;
   height: 68px;
+  padding: 15px 18px
 }
 
 .company-item .company-logo img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
+
