change font size for detail common

--- a/practice-one/src/css/sections/reference.css
+++ b/practice-one/src/css/sections/reference.css
@@ -20,6 +20,7 @@
 
   .section-top-reference .detail-common-primary {
     margin-bottom: 48px;
+    font-size: 1.125rem;
   }
 
   .section-top-reference .reference-company {
