--- a/practice-one/src/components/header.html
+++ b/practice-one/src/components/header.html
@@ -12,7 +12,7 @@
       </div>
     </nav>
     <button class="button-menu">
-      <div class="menu-bar"></div>
+      <span class="menu-bar"></span>
     </button>
     <include src="./components/button.html" locals='{"text": "İletişim"}'></include>
   </div>
