--- a/practice-one/src/css/bases/fonts.css
+++ b/practice-one/src/css/bases/fonts.css
@@ -1,4 +1,11 @@
 @font-face {
   font-family: Manrope;
   src: url(../../assets/fonts/Manrope/Manrope-VariableFont_wght.ttf);
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Inter;
+  src: url(../../assets/fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
+  font-display: swap;
 }
