convert img jpg to webp

--- a/practice-one/src/components/header.html
+++ b/practice-one/src/components/header.html
@@ -11,9 +11,9 @@
         </ul>
       </div>
     </nav>
-    <button class="button-menu">
+    <div class="button-menu">
       <span class="menu-bar"></span>
-    </button>
+    </div>
     <include src="./components/button.html" locals='{"text": "İletişim"}'></include>
   </div>
 </header>
