--- a/practice-one/src/css/sections/provide.css
+++ b/practice-one/src/css/sections/provide.css
@@ -1,5 +1,5 @@
 .section-top-provide {
-  background: var(--color-secondary) url("../../assets/images/sp/background_top_provide.jpg") left/cover no-repeat;
+  background: var(--color-secondary) url("../../assets/images/sp/background_top_provide.jpg.webp") left/cover no-repeat;
   color: var(--color-primary);
   padding: 3.125rem 0 5.25rem;
 }
@@ -50,7 +50,7 @@
 @media screen and (min-width: 768px) {
   .section-top-provide {
     padding: 35px 0 0;
-    background-image: url("../../assets/images/background_top_provide.jpg");
+    background-image: url("../../assets/images/background_top_provide.jpg.webp");
   }
 
   .section-top-provide .title-common-primary {
