add variable for css file

--- a/practice-one/src/css/components/button.css
+++ b/practice-one/src/css/components/button.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f84646;
+    background-color: var(--color-secondary);
     padding: .625rem 1.25rem;
     border-radius: 5px;
     transition: .4s;
