--- a/practice-one/src/components/footer.html
+++ b/practice-one/src/components/footer.html
@@ -4,46 +4,46 @@
       <div class="navigation-item">
         <h2 class="navigation-title">Çözüm ve Hizmetler</h2>
         <ul class="navigation-list">
-          <li class="list-item"><a href="javascript:void(0)">Yazılım Geliştirme</a></li>
-          <li class="list-item"><a href="javascript:void(0)">Outsourcing</a></li>
-          <li class="list-item"><a href="javascript:void(0)">Kalite ve Süreç Yönetimi</a></li>
-          <li class="list-item"><a href="javascript:void(0)">Danışmanlık</a></li>
-          <li class="list-item"><a href="javascript:void(0)">IoT Destekli Çözümler</a></li>
+          <li class="list-item"><a href="#">Yazılım Geliştirme</a></li>
+          <li class="list-item"><a href="#">Outsourcing</a></li>
+          <li class="list-item"><a href="#">Kalite ve Süreç Yönetimi</a></li>
+          <li class="list-item"><a href="#">Danışmanlık</a></li>
+          <li class="list-item"><a href="#">IoT Destekli Çözümler</a></li>
         </ul>
       </div>
       <div class="navigation-item">
         <h2 class="navigation-title">Ürünler</h2>
         <ul class="navigation-list">
-          <li class="list-item"><a href="javascript:void(0)">Eğitim Yönetim Sistemi</a></li>
-          <li class="list-item"><a href="javascript:void(0)">İnsan Sermayesi Yönetim Sistemi</a></li>
-          <li class="list-item"><a href="javascript:void(0)">Müşteri İlişkileri Yönetim Sistemi</a></li>
-          <li class="list-item"><a href="javascript:void(0)">İçerik Yönetim Sistemi</a></li>
+          <li class="list-item"><a href="#">Eğitim Yönetim Sistemi</a></li>
+          <li class="list-item"><a href="#">İnsan Sermayesi Yönetim Sistemi</a></li>
+          <li class="list-item"><a href="#">Müşteri İlişkileri Yönetim Sistemi</a></li>
+          <li class="list-item"><a href="#">İçerik Yönetim Sistemi</a></li>
         </ul>
       </div>
       <div class="navigation-item">
         <h2 class="navigation-title">Kurumsal</h2>
         <ul class="navigation-list">
-          <li class="list-item"><a href="javascript:void(0)">Hakkımızda</a></li>
-          <li class="list-item"><a href="javascript:void(0)">Belge ve Yetkinlikler</a></li>
-          <li class="list-item"><a href="javascript:void(0)">İş Ortakları</a></li>
+          <li class="list-item"><a href="#">Hakkımızda</a></li>
+          <li class="list-item"><a href="#">Belge ve Yetkinlikler</a></li>
+          <li class="list-item"><a href="#">İş Ortakları</a></li>
         </ul>
       </div>
       <div class="navigation-item">
         <h2 class="navigation-title">İletişim</h2>
         <ul class="navigation-list">
-          <li class="list-item"><a href="javascript:void(0)">Bilgi İstek Formu</a></li>
-          <li class="list-item"><a href="javascript:void(0)">Uzman Talep Formu</a></li>
+          <li class="list-item"><a href="#">Bilgi İstek Formu</a></li>
+          <li class="list-item"><a href="#">Uzman Talep Formu</a></li>
         </ul>
       </div>
     </nav>
     <div class="footer-infor">
       <div class="footer-media">
         <ul class="media-list">
-          <li class="list-item is-icon"><a href="javascript:void(0)"></a></li>
-          <li class="list-item is-linkedin"><a href="javascript:void(0)"></a></li>
-          <li class="list-item is-twitter"><a href="javascript:void(0)"></a></li>
-          <li class="list-item is-instagram"><a href="javascript:void(0)"></a></li>
-          <li class="list-item is-facebook"><a href="javascript:void(0)"></a></li>
+          <li class="list-item is-icon"><a href="#"></a></li>
+          <li class="list-item is-linkedin"><a href="#"></a></li>
+          <li class="list-item is-twitter"><a href="#"></a></li>
+          <li class="list-item is-instagram"><a href="#"></a></li>
+          <li class="list-item is-facebook"><a href="#"></a></li>
         </ul>
       </div>
       <div class="footer-copyright">
