--- a/practice-one/src/components/info-blog.html
+++ b/practice-one/src/components/info-blog.html
@@ -5,7 +5,7 @@
   <div class="blog-content">
     <h2 class="title-common-primary">{{title}}</h2>
     <p class="detail-common-primary">{{detail}}</p>
-    <a class="button-common-primary" href="javascript:void(0)">
+    <a class="button-common-primary" href="#">
       <span class="button-wrapper">Keşfet</span>
     </a>
   </div>
