--- a/practice-one/src/css/components/button.css
+++ b/practice-one/src/css/components/button.css
@@ -3,8 +3,8 @@
     align-items: center;
     justify-content: center;
     background-color: var(--color-secondary);
-    padding: .625rem 1.25rem;
-    border-radius: 5px;
+    padding: .1rem .2rem;
+    border-radius: .05rem;
     transition: .4s;
     cursor: pointer;
     flex: 0 0 auto;
@@ -14,7 +14,7 @@
 .button-common-primary .button-wrapper {
     color: var(--color-primary);
     transition: .4s;
-    font-size: --font-size-default;
+    font-size: var(--font-size-default);
     font-weight: 700;
 }
 
