--- a/practice-one/src/css/components/detail.css
+++ b/practice-one/src/css/components/detail.css
@@ -1,13 +1,13 @@
 .detail-common-primary {
   color: var(--color-default);
   font-weight: 400;
-  font-size: .75rem;
-  margin-bottom: 2.5rem;
+  font-size: .12rem;
+  margin-bottom: .4rem;
   line-height: calc(22 / 12);
 }
 
 @media screen and (min-width: 768px) {
   .detail-common-primary {
-    font-size: 1.5rem;
+    font-size: .24rem;
   }
 }
