--- a/practice-one/src/css/sections/keyvisual.css
+++ b/practice-one/src/css/sections/keyvisual.css
@@ -1,8 +1,8 @@
 .section-top-keyvisual {
   position: relative;
   z-index: 10;
-  padding: 8.5625rem 0;
-  margin-top: -4.125rem;
+  padding: 1.37rem 0;
+  margin-top: -.66rem;
 }
 
 .section-top-keyvisual .keyvisual-background {
@@ -21,19 +21,19 @@
 }
 
 .section-top-keyvisual .keyvisual-title {
-  font-size: 2.625rem;
+  font-size: 0.42rem;
   color: var(--color-default);
   line-height: calc(57.5 / 42);
   font-weight: 800;
   text-align: center;
-  margin-bottom: 1.875rem;
+  margin-bottom: .3rem;
 }
 
 .section-top-keyvisual .keyvisual-detail {
-  font-size: 0.75rem;
+  font-size: .12rem;
   font-weight: 400;
   text-align: center;
-  margin-bottom: 2.625rem;
+  margin-bottom: .42rem;
   line-height: calc(23 / 12);
 }
 
@@ -42,19 +42,19 @@
   background-color: var(--color-primary);
   width: 90%;
   margin: 0 auto;
-  padding: 6px 6px 6px 20px;
-  border-radius: 8px;
+  padding: .06rem .06rem .06rem .2rem;
+  border-radius: .08rem;
   justify-content: space-between;
 }
 
 .section-top-keyvisual .keyvisual-register .button-common-primary {
-  border-radius: 8px;
+  border-radius: .08rem;
 }
 
 .section-top-keyvisual .register-input {
   width: 100%;
   box-sizing: border-box;
-  margin-right: 10px;
+  margin-right: .1rem;
 }
 
 .section-top-keyvisual .is-desktop {
@@ -62,7 +62,7 @@
 }
 
 .section-top-keyvisual .register-input, .register-input::placeholder {
-  font-size: .875rem;
+  font-size: .14rem;
   color: rgba(0,0,0,.4);
 }
 
